added js files and stylesheets

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,96 @@
-<h2>Hello world!</h2>
+<div class="row clearfix" id="loginRow">
+        <img class="accountButtons" id="loginButton" src="images/loginButton.svg">
+
+        <p class="accountButtons" id="signUpButton">Sign Up</p>
+        </div>
+      </div> <!-- loginRow -->
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+
+    <div class="row " id="headlineLogo">
+      <a href="index.html"><img src="headlineLogo"></a>
+      <div class="one-half column" style="margin-top: 5%">
+      </div>
+    </div>  <!-- headlineLogo -->
+
+
+
+<div class="row" id="navBar">
+   <div class="two columns" id="oneMinute"><a href="oneMinute.html" class="hrefLink">1 Minute</a></div>
+    <div class="two columns" id="twoMinutes"><a href="twoMinutes.html" class="hrefLink">Two Minutes</a></div>
+    <div class="two columns" id="tenMinutes"><a href="tenMinutes.html" class="hrefLink">10 Minutes</a></div>
+    <div class="two columns" id="mostRead"><a href="mostRead.html" class="hrefLink">Most Read</a></div>
+    <div class="two columns" id="leastRead"><a href="leastRead.html" class="hrefLink">Least read</a></div>
+</div> <!-- navBar -->
+
+
+<div class="contentWrapper">
+  <div class="row contentSection">
+    <div class="one-third column">
+      <h1 class="storyHeadline leastRead"><a href="sampleArticle.html" class="hrefLink">Extra Extra! Read All About It.</a></h1>
+      <p>New York Times</p>
+      <p class="storyPreview">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed egestas purus mauris, sit amet facilisis enim hendrerit ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus ac purus vel tortor tempor convallis. Donec at ultrices magna. Suspendisse nec nisl mauris. Curabitur molestie pellentesque congue. Cras ultricies, turpis vitae posuere congue, odio sem bibendum odio, et rutrum nulla purus vitae purus.
+      </p>
+      <button class="readMore">Read More</button>
+    </div>
+
+    <div class="one-third column">
+      <h1 class="storyHeadline tenMinutes">Headline</h1>
+      <p>Twitter</p>
+      <p class="storyPreview">
+        Ut a nunc maximus, mollis arcu sit amet, consequat nisl. Morbi vitae nulla urna. In et est at dolor pharetra tristique sit amet sed massa. In vel dui porttitor, vulputate est et, tincidunt sapien. Phasellus condimentum neque sem, ut eleifend leo ultricies nec. Nullam convallis lacinia velit eget blandit. Pellentesque pulvinar dolor arcu, id vehicula lorem luctus eget. Suspendisse at gravida mauris.
+
+        Cras non sapien pellentesque, feugiat odio sed, ornare ante. Vivamus mauris nulla, ullamcorper et sem vel, porttitor venenatis sapien. Integer volutpat, risus quis laoreet lobortis, leo arcu aliquet nisi, eget sodales tellus metus eu elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet quam at libero sodales lacinia. Curabitur at justo purus. Nam convallis ornare leo ac dictum. Ut hendrerit est id sapien porta, et viverra quam faucibus.
+      </p>
+      <button class="readMore">Read More</button>
+    </div>
+
+    <div class="one-third column">
+      <h1 class="storyHeadline oneMinute">Story</h1>
+      <p>Washington Post</p>
+      <p class="storyPreview">
+        Cras non sapien pellentesque, feugiat odio sed, ornare ante. Vivamus mauris nulla, ullamcorper et sem vel, porttitor venenatis sapien. Integer volutpat, risus quis laoreet lobortis, leo arcu aliquet nisi, eget sodales tellus metus eu elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet quam at libero sodales lacinia. Curabitur at justo purus. Nam convallis ornare leo ac dictum. Ut hendrerit est id sapien porta, et viverra quam faucibus.
+      </p>
+      <button class="readMore">Read More</button>
+    </div>
+</div>
+
+
+
+<div class="contentWrapper">
+<div class="row contentSection">
+
+    <div class="one-third column">
+      <h1 class="storyHeadline twoMinutes">Thing</h1>
+      <p class="storyPreview">
+        Suspendisse ac ligula nibh. Ut vel dolor non nulla luctus congue. Suspendisse sit amet laoreet eros. Integer efficitur sodales eleifend. Proin eget augue non velit consectetur egestas. Mauris dolor nibh, posuere sed efficitur ac, dapibus ut purus. Pellentesque vestibulum dui quis consequat volutpat. Donec rhoncus eu ligula eget aliquam. Nulla sed vestibulum eros. Morbi cursus imperdiet porttitor. Pellentesque aliquam erat dolor, dapibus consectetur dui aliquet non. Curabitur sed quam justo.
+
+        Cras id tortor imperdiet, iaculis augue sed, auctor lacus. Nam vitae semper elit. Ut accumsan, tortor vitae posuere bibendum, ipsum ex tempus nisl, sed tincidunt ex augue et orci. Aenean luctus sit amet neque interdum pellentesque. Maecenas scelerisque fringilla nisi eget efficitur. Nam pulvinar lectus nunc, sed interdum nunc congue sed. Aliquam non nisl nulla. Nulla dictum lorem placerat, porta leo vitae, facilisis lectus. Nam neque leo, gravida id mi sit amet, accumsan maximus eros. Morbi consectetur, arcu non aliquam accumsan, est odio dapibus enim, at tempor sem odio ac diam.
+      </p>
+      <button class="readMore">Read More</button>
+    </div>
+
+    <div class="one-third column">
+      <h1 class="storyHeadline mostRead">Something Happened</h1>
+      <p class="storyPreview">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed egestas purus mauris, sit amet facilisis enim hendrerit ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus ac purus vel tortor tempor convallis. Donec at ultrices magna. Suspendisse nec nisl mauris. Curabitur molestie pellentesque congue. Cras ultricies, turpis vitae posuere congue, odio sem bibendum odio, et rutrum nulla purus vitae purus.
+      </p>
+      <button class="readMore">Read More</button>
+    </div>
+
+    <div class="one-third column">
+      <h1 class="storyHeadline leastRead">Look! Cool!</h1>
+      <p class="storyPreview">
+        Ut a nunc maximus, mollis arcu sit amet, consequat nisl. Morbi vitae nulla urna. In et est at dolor pharetra tristique sit amet sed massa. In vel dui porttitor, vulputate est et, tincidunt sapien.
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed egestas purus mauris, sit amet facilisis enim hendrerit ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus ac purus vel tortor tempor convallis. Donec at ultrices magna. Suspendisse nec nisl mauris. Curabitur molestie pellentesque congue. Cras ultricies, turpis vitae posuere congue, odio sem bibendum odio, et rutrum nulla purus vitae purus.
+      </p>
+      <button class="readMore">Read More</button>
+    </div> <!-- end one-thrid column -->
+
+</div> <!-- End contentSection -->
+</div> <!-- End contentWrapper -->
+</div> <!-- End Containter -->
