--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,13 @@
-<div class="row clearfix" id="loginRow">
-        <img class="accountButtons" id="loginButton" src="images/loginButton.svg">
 
-        <p class="accountButtons" id="signUpButton">Sign Up</p>
-        </div>
-      </div> <!-- loginRow -->
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
 
     <div class="row " id="headlineLogo">
-      <a href="index.html"><img src="headlineLogo"></a>
+      <a href="index.html">
+          <%= image_tag ("headlineLogo.svg") %>
+      </a>
       <div class="one-half column" style="margin-top: 5%">
       </div>
     </div>  <!-- headlineLogo -->
