--- a/app/assets/stylesheets/remainder.css
+++ b/app/assets/stylesheets/remainder.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -62,8 +62,8 @@ body {
   width: 80%;
   height: 100%;
   padding: 20px 10%;
-  text-align: center;
-  background-color: #36a7f3;
+  /*text-align: center;*/
+  /*background-color: #36a7f3;*/
 }
 h1 {
   margin: 40px 0;
@@ -84,7 +84,7 @@ h2 {
 a {
   text-align: left;
   text-decoration: none;
-  color: #fff;  
+  color: #fff;
   margin: 0 10px;
 }
 
@@ -99,18 +99,18 @@ p {
   box-sizing:border-box;
    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
-  
+
   position: relative;
   display: inline-block;
   overflow: hidden;
   height: 50px;
-  
+
   border-radius: 6px;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
-    
+
   line-height: 50px;
-  padding: 0 30px;  
+  padding: 0 30px;
   font-size: 14px;
   font-weight: bold;
 
@@ -118,7 +118,7 @@ p {
   box-shadow: 0 3px 0 0 #1275b7;
   background-color: #1e88ce;
 }
-  
+
   .btn:active,
   .btn.active {
     top: 2px;
