articles show route = complete

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -21,40 +21,33 @@
     <div class="two columns" id="tenMinutes"><a href="tenMinutes.html" class="hrefLink">10 Minutes</a></div>
     <div class="two columns" id="mostRead"><a href="mostRead.html" class="hrefLink">Most Read</a></div>
     <div class="two columns" id="leastRead"><a href="leastRead.html" class="hrefLink">Least read</a></div>
-  </div>
+</div>
 
 
-<!-- tracker -->
+<!-- scroll-along tracker -->
 <div class="tracker">
-<div class="row" id="articleView">
-
-<h1 class="leastRead"><%= @article.title %></h1>
-
-<!-- article container -->
-<div class="articleContent">
-<div class="two-thirds column">
-    <p>
-      <%= @article.fulltext %>
-    </p>
-
-</div> <!-- End Two-Thirds Column -->
-</div> <!-- End Article Content -->
-</div><!--  End Tracker -->
-<!-- 
-<div class="one-third column">
-
-</div>  -->
-
-<!-- End .one-third column -->
-
-
-
-
-</div> <!-- end .articleView -->
+    <div class="row" id="articleView">
+        <h1 class="leastRead"><%= @article.title %></h1>
+        <!-- article container -->
+        <div class="articleContent">
+            <div class="two-thirds column">
+                <p>
+                    <%= @article.fulltext %>
+                </p>
+            </div> <!-- End Two-Thirds Column -->
+        </div> <!-- End Article Content -->
+    </div><!--  End article view -->
+</div> <!-- end tracker -->
 
 
  <div class="footer">
     A well informed electorate is a prerequisite for democracy. - Thomas Jefferson
 </div>
+<!--
 
-<!-- </div> --><!-- <End Containter -->
+
+<script type="text/javascript">
+$(function(){
+      $("#demo-bar").load("../demo-bar.html");
+    });
+</script> -->
