--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,14 @@
 <h2><%= @user.username %>'s Reading List</h2>
 
-
+<!-- navBar -->
 <div class="row" id="navBar">
     <div class="two columns" id="oneMinute"><a href="oneMinute.html" class="hrefLink">1 Minute</a></div>
     <div class="two columns" id="twoMinutes"><a href="twoMinutes.html" class="hrefLink">Two Minutes</a></div>
     <div class="two columns" id="tenMinutes"><a href="tenMinutes.html" class="hrefLink">10 Minutes</a></div>
     <div class="two columns" id="tenMinutes"><%= link_to "Edit Profile", edit_user_path(@user), {:class => "hrefLink" } %></div>
-</div> <!-- navBar -->
+</div>
 
-
-
+<!-- all saved stories -->
 <div class="contentWrapper">
     <div class="row contentSection">
         <% @user.likes.each do |like| %>
@@ -19,10 +18,7 @@
                 <p class="storyPreview"><%= truncate(like.article.fulltext, :length => 500 )%></p>
                 <button class="readMore"><%= link_to "Read More", article_path(like.article)%></button>
 
-
-            <!-- </div> -->
         <% end %>
     </div> <!-- End contentSection -->
 </div> <!-- End contentWrapper -->
 <!-- </div>  -->
-<!-- End Containter -->
