improved color coordination, added functionality to display whether or not an article is already saved to a user's reading list

--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -74,7 +74,8 @@
   .eleven.columns                 { width: 91.3333333333%; }
   .twelve.columns                 { width: 100%; margin-left: 0; }
 
-  .one-third.column               { width: 30.6666666667%; }
+  .one-third.column               { width: 30.6666666667%;
+                                  	padding-top: 3em; }
   .two-thirds.column              { width: 65.3333333333%; }
 
   .one-half.column                { width: 48%; }
