--- a/app/assets/stylesheets/remainder.css
+++ b/app/assets/stylesheets/remainder.css
@@ -75,7 +75,6 @@ h1 {
 }
 h2 {
   font-size: 28px;
-  color: #fff;
   font-weight: normal;
   text-align: left;
   margin-bottom: 20px;
@@ -90,7 +89,7 @@ a {
 
 p {
   line-height: 32px;
-  padding: 0 0 40px 0;
+  padding: 0;
   text-align: left;
 }
 
