--- a/app/assets/stylesheets/tinboard.css
+++ b/app/assets/stylesheets/tinboard.css
@@ -1,3 +1,14 @@
+nav {
+    height: 100px;
+}
+
+a {
+    color: black;
+}
+
+
+
+
 .clearfix:after {
      visibility: hidden;
      display: block;
@@ -11,6 +22,7 @@
 * html .clearfix { height: 1%; }
 .clearfix { display: block; }
 
+/*************************Sign in/out header elements**************************/
 
 #loginRow {
 
@@ -29,15 +41,18 @@
 #profileButton{
     width:10%;
     float:right;
+    padding-top: 16px;
+    text-align: center;
 }
 
 #signOutButton {
-    /*float:right;*/
+    float:right;
     margin:1.2%;
 }
 
 #headlineLogo {
-	margin-top: 10%;
+	margin-top: 6%;
+    margin-bottom: 6%;
 	width:60%;
 }
 
@@ -47,6 +62,7 @@ color:black;
 
 }
 
+/************************* Nav elements**************************/
 
 #navBar {
 	margin-bottom: 5%;
@@ -103,10 +119,21 @@ color:black;
 	border-bottom: 5px solid #FF007A;
 }
 
+#Settings {
+
+	border-bottom: 5px solid #333333;
+}
+
+#Settings:hover {
+
+	border-bottom: 5px solid #FFAF94;
+}
+
+/*************************content container elements**************************/
 
 
 .contentWrapper {
-	padding-top: 5em;
+	/*padding-top: 5em;*/
 
 }
 
@@ -171,12 +198,21 @@ color:black;
 	/*border-bottom: 5px solid #FF007A;*/
 }
 
+.tracker {
+    padding-top: 3em;
+}
+.belongsToUser {
+    background-color: #FFAF94;
+}
+
 .readMore {
 	float:right;
 }
 
+
+
 .footer {
-  height: 25%;
+  height: 100px;
   font-size: 28px;
   text-align: center;
   color:white;
