--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,9 @@
     <div class="two columns" id="fourMinutes"><a href="twoMinutes.html" class="hrefLink">4 Minutes</a></div>
     <div class="two columns" id="sixMinutes"><a href="tenMinutes.html" class="hrefLink">6 Minutes</a></div>
     <div class="two columns" id="tenMinutes"><a href="mostRead.html" class="hrefLink">10 Minutes</a></div>
-    <div class="two columns" id="mostRead"><a href="leastRead.html" class="hrefLink">Most Read</a></div>
+    <div class="two columns" id="Settings">
+        <%= link_to "Edit Profile", edit_user_path(@user) %>
+    </div>
 </div>
 
 <!-- all saved stories -->
