--- a/app/views/users/sign_up.html.erb
+++ b/app/views/users/sign_up.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h4>Create a new account</h4>
 
 <%= form_tag("/sign_up", method: "post") do %>
     <input type="text" name="username" placeholder="username" />
