--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,13 +5,15 @@
 
 <!-- navBar -->
 <div class="row" id="navBar">
-   <div class="two columns" id="twoMinutes">
-       <a href="oneMinute.html" class="hrefLink">2 Minutes</a>
+   <div class="two columns" id="twoMinutes">2 Minutes
+       <%# link_to "2 minutes", { :class=>"hrefLink", :remote => true} %>
    </div>
-    <div class="two columns" id="fourMinutes"><a href="twoMinutes.html" class="hrefLink">4 Minutes</a></div>
-    <div class="two columns" id="sixMinutes"><a href="tenMinutes.html" class="hrefLink">6 Minutes</a></div>
-    <div class="two columns" id="tenMinutes"><a href="mostRead.html" class="hrefLink">10 Minutes</a></div>
-    <div class="two columns" id="mostRead"><a href="leastRead.html" class="hrefLink">Most Read</a></div>
+    <div class="two columns" id="fourMinutes"> 4 minutes
+        <!-- <a href="twoMinutes.html" class="hrefLink">4 Minutes</a> -->
+    </div>
+    <div class="two columns" id="sixMinutes"><a href="#" class="hrefLink">6 Minutes</a></div>
+    <div class="two columns" id="tenMinutes"><a href="#" class="hrefLink">10 Minutes</a></div>
+    <div class="two columns" id="mostRead"><a href="#" class="hrefLink">Most Read</a></div>
 </div>
 
 
