--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,9 @@
    <div class="two columns" id="twoMinutes">
        <a href="oneMinute.html" class="hrefLink">2 Minutes</a>
    </div>
-    <div class="two columns" id="fourMinutes"><a href="twoMinutes.html" class="hrefLink">4 Minutes</a></div>
+   <div class="two columns" id="fourMinutes"> 4 minutes
+       <!-- <a href="twoMinutes.html" class="hrefLink">4 Minutes</a> -->
+   </div>
     <div class="two columns" id="sixMinutes"><a href="tenMinutes.html" class="hrefLink">6 Minutes</a></div>
     <div class="two columns" id="tenMinutes"><a href="mostRead.html" class="hrefLink">10 Minutes</a></div>
     <div class="two columns" id="mostRead"><a href="leastRead.html" class="hrefLink">Most Read</a></div>
