--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -28,22 +28,8 @@
 <!-- scroll-along tracker -->
 <div class="tracker">
     <div class="row" id="articleView">
-        <% if @article.length <= 400 %>
-            <% @class = "twoMinutes" %>
-        <% end %>
-        <% if @article.length > 400 && @article.length <= 800 %>
-            <% @class = "fourMinutes" %>
-        <% end %>
-        <% if @article.length > 800 && @article.length <= 1200 %>
-            <% @class = "sixMinutes" %>
-        <% end %>
-        <% if @article.length >= 1200 %>
-            <% @class = "tenMinutes" %>
-        <% end %>
-
         <!-- article title -->
-        <h1 class="<%= @class %>"><%= @article.title %></h1>
-
+        <h1 class="<%= @article.length_class %>"><%= @article.title %></h1>
         <!-- displays either button to save or that it is saved -->
         <% if @user.likes_article?(@article) %>
                 <button class="readMore belongsToUser">
