--- a/app/assets/stylesheets/tinboard.css
+++ b/app/assets/stylesheets/tinboard.css
@@ -7,7 +7,28 @@ a {
 }
 
 
+.storyHeadline {
+    font-size: 2.5em;
+    padding-top: 1.25em;
+    height: 100px;
+    /*word-wrap: break-all;*/
+    -ms-word-break: break-all;
+     word-break: break-all;
 
+-webkit-hyphens: auto;
+   -moz-hyphens: auto;
+        hyphens: auto;
+}
+
+.storyPreview {
+    /*padding-bottom: 50px;*/
+    -ms-word-break: break-all;
+         word-break: break-all;
+
+    -webkit-hyphens: auto;
+       -moz-hyphens: auto;
+            hyphens: auto;
+}
 
 .clearfix:after {
      visibility: hidden;
